testsuite/tests/typecheck/should_fail/UnliftedNewtypesLevityBinder.stderr

UnliftedNewtypesLevityBinder.hs:17:7: error:
    Cannot use function with levity-polymorphic arguments:
      UnliftedNewtypesLevityBinder.IdentC :: a -> Ident a
    Levity-polymorphic arguments: a :: TYPE r
